fixed spacing issue in help section

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -288,7 +288,7 @@ ul.activity{
 .nav.nav-tabs.nav-stacked{
    margin-top: 10px;
    margin-left: -30px;
-   width: 230px;
+   width: 250px;
 }
 
 .affix {
@@ -517,6 +517,10 @@ img.watch{
 
 .well.help a{
    color: #468847;
+}
+
+.span4.well.help {
+    width: 31.6%;
 }
 
 .link-span{
